# JpegBmp

./: README.md  app-debug.apk  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: jpegcompress-release.aar
app/src/androidTest/java/com/sunxiaoyu/jpegbmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/jpeg/: jpeglib.h
app/src/main/java/com/sunxiaoyu/jpegbmp/: JpegBmpUtils.java  MainActivity.java  PathUtils.java  Platform.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sunxiaoyu/jpegbmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jpegcompress/: build.gradle
jpegcompress/src/main/java/com/medivh/libjepgturbo/jepgcompress/: ImageCompress.java
